--- a/index.html
+++ b/index.html
@@ -3,68 +3,108 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>M3U Playlist Player</title>
+    <title>Stylish M3U Player with HLS.js</title>
     <style>
-        body {
+        /* Reset and Base Styles */
+        * {
             margin: 0;
-            font-family: Arial, sans-serif;
-            height: 100vh;
-            display: flex;
-            flex-direction: row;
-        }
-
-        /* Rainbow background */
-        body::before {
-            content: "";
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background: linear-gradient(90deg, red, orange, yellow, green, blue, indigo, violet);
-            background-size: 300% 300%;
-            animation: rainbow 10s linear infinite;
-            z-index: -1;
-        }
-
-        @keyframes rainbow {
-            0% { background-position: 0% 50%; }
-            100% { background-position: 100% 50%; }
-        }
-
-        /* Sidebar styles */
-        #sidebar {
-            width: 250px;
-            background-color: rgba(0, 0, 0, 0.7);
-            color: white;
-            padding: 10px;
-            overflow-y: auto;
-            height: 100vh;
-        }
-
-        #sidebar h2 {
-            text-align: center;
-        }
-
-        #sidebar ul {
-            list-style-type: none;
             padding: 0;
+            box-sizing: border-box;
         }
 
-        #sidebar li {
-            margin: 10px 0;
+        body {
+            font-family: 'Roboto', sans-serif;
+            display: flex;
+            flex-direction: column;
+            min-height: 100vh;
+            background: linear-gradient(135deg, #0f2027, #203a43, #2c5364);
+            background-size: 400% 400%;
+            animation: gradientAnimation 10s ease infinite;
+            color: white;
         }
 
-        #sidebar a {
-            color: #00FFFF;
+        @keyframes gradientAnimation {
+            0% { background-position: 0% 50%; }
+            50% { background-position: 100% 50%; }
+            100% { background-position: 0% 50%; }
+        }
+
+        /* Header Section */
+        #header {
+            padding: 20px;
+            background-color: rgba(0, 0, 0, 0.7);
+            text-align: center;
+            border-bottom: 2px solid #00d9ff;
+        }
+
+        #header h1 {
+            font-size: 2rem;
+            margin-bottom: 10px;
+            color: #00d9ff;
+        }
+
+        #input-container {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            gap: 10px;
+        }
+
+        #link-input {
+            padding: 10px;
+            border: none;
+            border-radius: 5px;
+            width: 300px;
+            font-size: 1rem;
+            background-color: #1f2933;
+            color: white;
+            outline: none;
+        }
+
+        #add-link {
+            padding: 10px 15px;
+            border: none;
+            background-color: #00d9ff;
+            color: #0f2027;
+            font-weight: bold;
+            font-size: 1rem;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+        }
+
+        #add-link:hover {
+            background-color: #00a1cc;
+        }
+
+        /* Link Bar Section */
+        #link-bar {
+            display: flex;
+            gap: 15px;
+            overflow-x: auto;
+            padding: 10px;
+            background-color: rgba(0, 0, 0, 0.8);
+            border-top: 2px solid #00d9ff;
+            border-bottom: 2px solid #00d9ff;
+            justify-content: center;
+        }
+
+        #link-bar a {
+            color: #00d9ff;
             text-decoration: none;
+            padding: 8px 15px;
+            border: 2px solid #00d9ff;
+            border-radius: 5px;
+            font-size: 1rem;
+            transition: all 0.3s ease;
         }
 
-        #sidebar a:hover {
-            text-decoration: underline;
+        #link-bar a:hover {
+            background-color: #00d9ff;
+            color: #0f2027;
         }
 
-        /* Player styles */
+        /* Player Section */
         #player-container {
             flex-grow: 1;
             display: flex;
@@ -76,68 +116,103 @@
         video {
             width: 100%;
             max-width: 800px;
-            border: 3px solid white;
+            border: 3px solid #00d9ff;
             border-radius: 10px;
+            box-shadow: 0 0 15px rgba(0, 0, 0, 0.5);
+        }
+
+        /* Footer Section */
+        footer {
+            text-align: center;
+            padding: 10px;
+            background-color: rgba(0, 0, 0, 0.7);
+            border-top: 2px solid #00d9ff;
+        }
+
+        footer p {
+            color: #00d9ff;
+            font-size: 0.9rem;
+        }
+
+        /* Responsive Adjustments */
+        @media (max-width: 768px) {
+            #link-input {
+                width: 200px;
+            }
         }
     </style>
 </head>
 <body>
-    <div id="sidebar">
-        <h2>Channel List</h2>
-        <ul id="channel-list">
-            <!-- Channels will be loaded dynamically -->
-        </ul>
+    <!-- Header Section -->
+    <div id="header">
+        <h1>Interactive M3U Playlist Player</h1>
+        <div id="input-container">
+            <input type="text" id="link-input" placeholder="Enter stream link (e.g., .m3u8)" />
+            <button id="add-link">Add Link</button>
+        </div>
     </div>
+
+    <!-- Link Bar -->
+    <div id="link-bar">
+        <!-- Dynamic links will be added here -->
+    </div>
+
+    <!-- Player Section -->
     <div id="player-container">
-        <video id="videoPlayer" controls autoplay>
-            <source id="videoSource" src="" type="application/x-mpegURL">
-            Your browser does not support the video player.
-        </video>
+        <video id="videoPlayer" controls autoplay></video>
     </div>
 
+    <!-- Footer Section -->
+    <footer>
+        <p>&copy; 2024 Interactive M3U Player. All rights reserved.</p>
+    </footer>
+
+    <!-- HLS.js Script -->
+    <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
     <script>
-        // M3U Playlist Parser and Loader
-        const m3uUrl = "path/to/your/playlist.m3u"; // Replace with the URL or local path to your M3U file
-        const channelList = document.getElementById('channel-list');
+        const linkInput = document.getElementById('link-input');
+        const addLinkButton = document.getElementById('add-link');
+        const linkBar = document.getElementById('link-bar');
         const videoPlayer = document.getElementById('videoPlayer');
-        const videoSource = document.getElementById('videoSource');
 
-        // Fetch and parse M3U
-        async function loadM3U() {
-            try {
-                const response = await fetch(m3uUrl);
-                const text = await response.text();
-                const lines = text.split('\n');
-                let currentChannel = null;
+        // Function to add a new link to the link bar
+        addLinkButton.addEventListener('click', () => {
+            const url = linkInput.value.trim();
+            if (!url) {
+                alert('Please enter a valid stream link!');
+                return;
+            }
 
-                lines.forEach(line => {
-                    if (line.startsWith('#EXTINF')) {
-                        currentChannel = line.split(',')[1]?.trim();
-                    } else if (line.startsWith('http') && currentChannel) {
-                        // Create a list item for the channel
-                        const li = document.createElement('li');
-                        const a = document.createElement('a');
-                        a.href = '#';
-                        a.textContent = currentChannel;
-                        a.onclick = (e) => {
-                            e.preventDefault();
-                            videoSource.src = line;
-                            videoPlayer.load();
-                            videoPlayer.play();
-                        };
-                        li.appendChild(a);
-                        channelList.appendChild(li);
-                        currentChannel = null;
-                    }
-                });
-            } catch (error) {
-                console.error('Failed to load M3U playlist:', error);
+            // Create a new link element
+            const link = document.createElement('a');
+            link.href = '#';
+            link.textContent = `Stream ${linkBar.children.length + 1}`;
+            link.onclick = (e) => {
+                e.preventDefault();
+                loadChannel(url);
+            };
+
+            // Add the new link to the link bar
+            linkBar.appendChild(link);
+
+            // Clear the input field
+            linkInput.value = '';
+        });
+
+        // Function to load the selected channel into the video player
+        function loadChannel(url) {
+            if (Hls.isSupported()) {
+                const hls = new Hls();
+                hls.loadSource(url);
+                hls.attachMedia(videoPlayer);
+            } else if (videoPlayer.canPlayType('application/vnd.apple.mpegurl')) {
+                videoPlayer.src = url;
+            } else {
+                alert('HLS is not supported in your browser!');
             }
         }
-
-        // Load the playlist on page load
-        loadM3U();
     </script>
 </body>
 </html>
+
 
